# xtri

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: benchmarks.rs  insert.rs
src/: lib.rs  tree.rs
src/iter/: leaves.rs  mod.rs  search.rs  tolerance.rs
