[package]
name = "xtri"
version = "0.1.2"
edition = "2024"
license = "MIT"
description = "A fast, memory-efficient radix tree (compressed trie) implementation in Rust with UTF-8 support"
documentation = "https://docs.rs/xtri"
homepage = "https://github.com/oramasearch/xtri"
repository = "https://github.com/oramasearch/xtri"
keywords = ["radix-tree", "trie", "data-structure", "prefix-search", "utf8"]
categories = ["data-structures", "algorithms"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
rayon = { version = "1.10", optional = true }

[features]
default = ["serde_json", "parallel"]
parallel = ["dep:rayon"]
serde_json = ["dep:serde_json"]

[dev-dependencies]
criterion = "0.5"
fake = "2.9"
rand = "0.8"

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "insert"
harness = false

[lints.clippy]
needless_doctest_main = "allow"
